Zmiany w logowaniu w bazie i poprawki